--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  #components-layout-demo-custom-trigger .trigger {
+    line-height: 64px;
+    cursor: pointer;
+    transition: color 0.3s;
   }
-  to {
-    transform: rotate(360deg);
+  
+  #components-layout-demo-custom-trigger .trigger:hover {
+    color: #1890ff;
   }
+  
+  :where(.css-dev-only-do-not-override-1vtf12y).ant-menu .ant-menu-item{
+    white-space: initial !important;
+  }
+  :where(.css-1vtf12y).ant-menu .ant-menu-item{
+    white-space: unset;
+  }
+  .site-layout .site-layout-background {
+    background: #fff;
+  
+  }
+  .ant-pagination-options-size-changer.ant-select{
+    display: none;
+  }
+  /* .ant-menu-inline .ant-menu-item{
+    padding: 0 10px;
+  } */
+.logo{
+    font-size: 28px;
+    font-family: Arial, Helvetica, sans-serif; 
+    font-weight: 600;
+    text-align: center;
+    padding: 10px 0;
+    color: #000;
 }
