--- a/src/App.css
+++ b/src/App.css
@@ -1,55 +1,54 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif !important;
 }
-  #components-layout-demo-custom-trigger .trigger {
-    line-height: 64px;
-    cursor: pointer;
-    transition: color 0.3s;
-  }
-  
-  #components-layout-demo-custom-trigger 
-  .trigger:hover {
-    color: #1890ff;
-  }
-  
-  :where(.css-dev-only-do-not-override-1vtf12y).ant-menu .ant-menu-item{
-    white-space: initial !important;
-  }
-  :where(.css-1vtf12y).ant-menu .ant-menu-item{
-    white-space: unset;
-  }
-  .site-layout .site-layout-background {
-    background: #fff;
-  
-  }
-  .ant-pagination-options-size-changer.ant-select{
-    display: none;
-  }
-  .logo {
-      font-size: 28px;
-      /* font-family: Arial, Helvetica, sans-serif;  */
-      font-weight: 600;
-      text-align: center;
-      padding: 14px 0;
-      color: #fff;   
-  }   
+#components-layout-demo-custom-trigger .trigger {
+  line-height: 64px;
+  cursor: pointer;
+  transition: color 0.3s;
+}
 
-  .logo-collapsed{
-    font-size: 18px;
-      /* font-family: Arial, Helvetica, sans-serif;  */
-      font-weight: 500;
-      text-align: center;
-      padding: 20px 0;
-      color: #fff
-  }
+#components-layout-demo-custom-trigger .trigger:hover {
+  color: #1890ff;
+}
 
-.isnot{
+:where(.css-dev-only-do-not-override-1vtf12y).ant-menu .ant-menu-item {
+  white-space: initial !important;
+}
+:where(.css-1vtf12y).ant-menu .ant-menu-item {
+  white-space: unset;
+}
+.site-layout .site-layout-background {
+  background: #fff;
+}
+.ant-pagination-options-size-changer.ant-select {
+  display: none;
+}
+.logo {
+  font-size: 28px;
+  /* font-family: Arial, Helvetica, sans-serif;  */
+  font-weight: 600;
+  text-align: center;
+  padding: 14px 0;
+  color: #fff;
+}
+
+.logo-collapsed {
+  font-size: 18px;
+  /* font-family: Arial, Helvetica, sans-serif;  */
+  font-weight: 500;
+  text-align: center;
+  padding: 20px 0;
+  color: #fff;
+}
+
+.isNot {
   display: none;
 }
 
-.ant-table-row{
+.ant-table-row {
   cursor: pointer;
 }
 
@@ -60,16 +59,16 @@
 
 #element::-webkit-scrollbar-thumb {
   border-radius: 10px;
-  background-color: #595959;
+  background-color: rgb(41, 54, 73);
 }
 
 #element::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
   background-color: #f9f9fd;
 }
 
-.ant-layout-sider-trigger{
+.ant-layout-sider-trigger {
   background: none !important;
   border-top: 1px solid #cecece;
 }
@@ -87,7 +86,7 @@
   border: 1px solid #bfbfbf;
   padding: 4px;
   color: black;
-  border-radius:5px;
+  border-radius: 5px;
 }
 
 .status-in-progress {
@@ -95,7 +94,7 @@
   border: 1px solid #bfbfbf;
   padding: 4px;
   color: black;
-  border-radius:5px;
+  border-radius: 5px;
 }
 
 .status-done {
@@ -114,7 +113,7 @@
   border-radius: 5px;
 }
 
-.status-setup{
+.status-setup {
   background-color: rgb(233, 142, 142);
   border: 1px solid #bfbfbf;
   padding: 4px;
@@ -123,5 +122,128 @@
 }
 
 .new-status-row {
-  background-color: rgba(170, 170, 170, 0.44);
+  background-color: rgba(169, 169, 169, 0.356);
+}
+.new-status-row .ant-table-cell-fix-right {
+  background-color: rgba(204, 204, 204, 0.128) !important;
+}
+.new-status-row .ant-table-cell-fix-left {
+  background-color: rgba(204, 204, 204, 0.128) !important;
+}
+
+@media screen and (max-width: 768px) {
+  * {
+    font-size: 14px;
+  }
+
+  .search {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .search div,
+  .ant-input-wrapper {
+    margin-left: 0 !important;
+    margin-bottom: 5px;
+  }
+}
+
+.dataBold span {
+  font-weight: 700;
+}
+
+.card_stat {
+  font-weight: 500;
+  font-size: 20px;
+  padding: 20px;
+  background: #deeeff;
+  border-radius: 10px;
+  width: 200px;
+  height: 180px;
+  text-align: center;
+  -webkit-box-shadow: 0px 0px 12px 1px rgba(34, 60, 80, 0.08);
+  -moz-box-shadow: 0px 0px 12px 1px rgba(34, 60, 80, 0.08);
+  box-shadow: 0px 0px 12px 1px rgba(34, 60, 80, 0.08);
+  cursor: pointer;
+  transition: 0.4s;
+}
+
+.card_stat:hover {
+  background: #cfe4fc;
+}
+
+.card_stat span {
+  font-weight: 700;
+  font-size: 44px;
+  display: block;
+  text-align: center;
+  margin-top: 15px;
+  color: #464646;
+}
+
+.mainStat {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 30px;
+}
+.mainstat-left,
+.mainstat-right {
+  display: flex;
+  justify-content: space-between;
+}
+
+.mainstat-card {
+  width: 50%;
+  height: 38vh;
+  margin-right: 12px;
+  margin-bottom: 12px;
+  padding: 15px;
+  background: #fcfcfc;
+  border-radius: 15px;
+  -webkit-box-shadow: 0px 0px 12px 1px rgba(34, 60, 80, 0.08);
+  -moz-box-shadow: 0px 0px 12px 1px rgba(34, 60, 80, 0.08);
+  box-shadow: 0px 0px 12px 1px rgba(34, 60, 80, 0.08);
+}
+
+.ant-layout-content {
+  padding: 20px !important;
+}
+
+.cards {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+a {
+  color: rgb(59, 110, 165);
+}
+
+.ant-menu-dark .ant-menu-item-selected {
+  color: rgb(41, 54, 73);
+  background: #3f4f67;
+}
+
+.ant-table-content::-webkit-scrollbar {
+  width: 5px;
+  height: 12px; 
+}
+
+.ant-table-content::-webkit-scrollbar-thumb {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  background-color: rgba(41, 54, 73, 0.822);
+}
+
+.tagz{
+  width: 100px;
+  text-align: center;
+  padding: 4px;
+  font-size: 14px;
+  font-weight: 300;
+  border-radius: 3px;
 }
